# AdventOfCode2022

./: CMakeLists.txt
AdventOfCode1/: .cproject  .project
AdventOfCode1/src/: Element.h  LinkedList.c  List.h  adventOfCode.c  adventOfCode.h  day1.c  day10.c  day2.c  day3.c  day4.c  day5.c  day6.c  day7.c  day8.c  day9.c  main.c  myFile.c  myFile.h  tree.c  tree.h
